# selenium-in-lambda

./: .gitignore  Makefile  README.md  package-lock.json
lambda/: env_sample.sh  pyproject.toml
lambda/layer/app/: requirements.txt
lambda/layer/chrome/: createLayer.sh
lambda/src/foo/: index.py
lambda/tests/foo/: test_index.py
lib/: cdk-workshop-stack-simple-lambda.ts
